Bug #4603 SHOW TABLES table_type incorreclty named
Submitted: 18 Jul 2004 22:22 Modified: 19 Jul 2004 11:12
Reporter: Trudy Pelzer Email Updates:
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:5.0.1-alpha-debug OS:Linux (SuSE 8.2)
Assigned to: Oleksandr Byelkin Target Version:

[18 Jul 2004 22:22] Trudy Pelzer
Description:
While testing views, I noted that SHOW TABLES has a column named "Type", which has two options: "table" and "view".

According to WL#941 and the SQL Standard, the name of the column should be "table_type" and the correct options are "BASE TABLE" and "VIEW".

How to repeat:
create table t1 (col1 int,col2 char(22));
create view vt1 as select  from t1;
show tables;
[19 Jul 2004 10:00] Oleksandr Byelkin
Thank You for bugreport! 
I trust you about standard, but WL#941 have not information about SHOW TABLES output 
so I made best what my imegination allow me :). I will fix it soon.
[19 Jul 2004 11:09] Oleksandr Byelkin
ChangeSet 
  1.1708 04/07/19 12:07:33 bell@sanja.is.com.ua +13 -0 
  standard values for table type in SHOW TABLES (BUG#4603)
[19 Jul 2004 11:12] Oleksandr Byelkin
Thank you for bugreport again. 
Bug is fixed, bugfix is pushed to our internal source repository and will be accessable in 
public repository, soon (it should be in several hours)