standard values for table type in SHOW TABLES (BUG#4603)

mysql-test/r/connect.result:
  standard values for table type in SHOW TABLES
mysql-test/r/ctype_recoding.result:
  standard values for table type in SHOW TABLES
mysql-test/r/drop.result:
  standard values for table type in SHOW TABLES
mysql-test/r/greedy_optimizer.result:
  fixed results
mysql-test/r/lowercase_table.result:
  standard values for table type in SHOW TABLES
mysql-test/r/ps_1general.result:
  standard values for table type in SHOW TABLES
mysql-test/r/rename.result:
  standard values for table type in SHOW TABLES
mysql-test/r/rpl000009.result:
  standard values for table type in SHOW TABLES
mysql-test/r/rpl_error_ignored_table.result:
  standard values for table type in SHOW TABLES
mysql-test/r/select.result:
  standard values for table type in SHOW TABLES
mysql-test/r/system_mysql_db.result:
  standard values for table type in SHOW TABLES
mysql-test/r/view.result:
  standard values for table type in SHOW TABLES
sql/sql_show.cc:
  standard values for table type in SHOW TABLES
  debugging trap